--- a/index.html
+++ b/index.html
@@ -214,10 +214,10 @@
 </head>
 <body>
 
-<video id="bgMusic" autoplay loop hidden>
-  <source src="musik.mp4" type="video/mp4">
+<audio id="bgMusic" autoplay loop>
+  <source src="musik.mp3" type="audio/mpeg">
   Browser kamu tidak mendukung audio tag.
-</video>
+</audio>
 
   <!-- Tombol Mode Toggle -->
   <button id="modeToggle" onclick="toggleMode()">☀︎</button>
